CURRENT_RELEASE
---------------
Fix #36962 - Explain the required privileges for users in the user manual
Fix #36983 - Clean META-INF resources in distributions
Fix #37021 - Replace Log4j by SLF4J
Fix #36960 - User names should be quoted in CONNECT statements

20180312
---------------
- Fixed #36395 - OData 2 does not allow views without primary key
- Fixed #36389 - The OData 2 Service cannot access VDP databases and views with non-ASCII characters in their names.

20170821
--------
- Added #33446 - Debug support
- Fixed #33458 - HTTP Error 500 when service name contains database name

20170518
--------
-   Added #32416 - Create scripts to manage the Odata2 service as Windows service.
-   Fixed#32392 - Password issue in OData

20170404
--------
- Fixed #28998 - Use Date/Timestamp literals instead of String
- Added #31696 - Review semantics of $top and $skip and how they are used for pagination

20160902
--------
- Fixed #28748 - Exception using a logical condition with null inside parentheses in a $filter expression

20160523
--------
- Fixed #27519 - OData Service goes down after several failed login attempts.

20160428
--------
- Fixed #27098 - Incorrect implementation of the $top operator.
- Fixed #27144 - Incorrect inclusion of "__next" links in response when remaining result count is zero.

20160414
--------
- Added #26914 - Implemented "odataserver.serviceRoot" configuration property in order to allow payload URL rewriting.

20160331
--------
- Fixed #26151 - Avoid queries inside a rowMap method (e.g. DESC COMMANDS)
- Fixed #26246 - Minor issue with next links.
- Fixed #26625 - Change the DENODO_HOME of the startup/shutdown .sh scripts to ..
- Fixed #26631 - Precedence grouping not honored in filter query options

20160311
--------
- Fixed #25532 - Documentation error
- Added #26047 - per-request caching of authentication in OData

20160129
--------
- Added #23067 - Expand System Query Option

20151125
--------