@@ -5,6 +5,7 @@ Fix #36962 - Explain the required privileges for users in the user manual
 Fix #36983 - Clean META-INF resources in distributions
 Fix #37021 - Replace Log4j by SLF4J
 Fix #36960 - User names should be quoted in CONNECT statements
+Fix #37044 - Error accessing the root of the OData 2 Service
 
 20180312
 ---------------
